--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,12 @@
 name: Linting
-on: push
+
+on:
+  push:
+    branches: [ develop, master ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ develop, master ]
+
 jobs:
   STEPS:
     runs-on: ubuntu-latest
