--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           node-version: "16.x"
 
-      - name: NPM Install
-        run: npm install
+      - name: Install Node.js dependencies
+        run: npm ci --ignore-scripts
 
       - name: Lint
         shell: bash
