--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ develop, master, release/0.21 ]
+    branches: [ develop, master ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ develop ]
