--- a/demos/package.json
+++ b/demos/package.json
@@ -35,7 +35,8 @@
     "rollup": "2.79.1",
     "rollup-plugin-typescript2": "^0.34.1",
     "slug": "^8.2.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "ua-parser-js": "^0.7.33"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "3.0.1",
