--- a/package.json
+++ b/package.json
@@ -71,15 +71,15 @@
     "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.47.1",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "acorn": "^8.8.1",
     "acorn-walk": "^8.2.0",
     "adlib": "^3.0.8",
-    "changelog-parser": "^2.8.1",
+    "changelog-parser": "^3.0.1",
     "cheerio": "^1.0.0-rc.12",
     "codecov": "^3.8.2",
     "concurrently": "^7.6.0",
-    "core-js": "^3.27.1",
+    "core-js": "^3.27.2",
     "coveralls": "^3.1.1",
     "cpx": "^1.5.0",
     "cross-spawn": "^7.0.3",
@@ -110,10 +110,10 @@
     "karma-spec-reporter": "0.0.34",
     "karma-typescript": "^5.5.3",
     "karma-typescript-es6-transform": "^5.5.3",
-    "lerna": "^6.1.0",
+    "lerna": "^6.4.1",
     "lint-staged": "^13.0.4",
     "marked": "^4.2.5",
-    "minimatch": "^6.0.4",
+    "minimatch": "^6.1.6",
     "prettier": "^2.8.3",
     "regenerator-runtime": "^0.13.10",
     "resolve": "^1.22.1",
@@ -129,6 +129,7 @@
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.23",
     "typescript": "^4.9.4",
+    "ua-parser-js": "^0.7.33",
     "uuid": "^9.0.0"
   },
   "dependencies": {
