--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "gh-pages": "^4.0.0",
     "gh-release": "^7.0.1",
     "handlebars": "^4.7.7",
+    "http-cache-semantics": "^4.1.1",
     "inspect-process": "^0.5.0",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-form-data": "^2.0.0",
@@ -121,7 +122,7 @@
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
-    "semantic-release": "^20.0.2",
+    "semantic-release": "^20.1.0",
     "shelljs": "^0.8.5",
     "sinon": "^15.0.1",
     "slug": "^8.0.0",
