--- a/demos/package.json
+++ b/demos/package.json
@@ -13,30 +13,7 @@
     "test:chrome": "karma start --single-run --browsers=Chrome"
   },
   "devDependencies": {
-    "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@types/jasmine": "^4.3.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "http-server": "*",
-    "jasmine": "^4.5.0",
-    "jasmine-core": "^4.5.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-diff-reporter": "^3.0.0",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.34",
-    "karma-typescript": "^5.5.3",
-    "karma-typescript-es6-transform": "^5.5.3",
-    "marked": "^4.2.12",
-    "rollup": "2.79.1",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "slug": "^8.2.2",
-    "typescript": "^4.9.5",
-    "ua-parser-js": "^0.7.33"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "3.0.1",
