--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,10 +18,10 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-initiatives": "9.29.0",
-    "@esri/hub-sites": "9.29.0",
-    "@esri/hub-teams": "9.29.0",
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-initiatives": "^12.4.1",
+    "@esri/hub-sites": "^12.5.0",
+    "@esri/hub-teams": "^12.4.1",
     "@types/adlib": "^3.0.1",
     "rollup": "2.79.1"
   },
@@ -31,10 +31,10 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-initiatives": "9.29.0",
-    "@esri/hub-sites": "9.29.0",
-    "@esri/hub-teams": "9.29.0"
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-initiatives": "^12.4.1",
+    "@esri/hub-sites": "^12.5.0",
+    "@esri/hub-teams": "^12.4.1"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "3.0.1",
