--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -18,10 +18,16 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-initiatives": "9.29.0",
-    "@esri/hub-sites": "9.29.0",
-    "@esri/hub-teams": "9.29.0",
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-initiatives": "^12.4.1",
+    "@esri/hub-sites": "^12.5.0",
+    "@esri/hub-teams": "^12.4.1",
+    "@esri/solution-common": "^1.7.0",
+    "@esri/solution-feature-layer": "^1.7.0",
+    "@esri/solution-file": "^1.7.0",
+    "@esri/solution-group": "^1.7.0",
+    "@esri/solution-simple-types": "^1.7.0",
+    "@esri/solution-storymap": "^1.7.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
@@ -30,18 +36,12 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-initiatives": "9.29.0",
-    "@esri/hub-sites": "9.29.0",
-    "@esri/hub-teams": "9.29.0"
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-initiatives": "^12.4.1",
+    "@esri/hub-sites": "^12.5.0",
+    "@esri/hub-teams": "^12.4.1"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.7.0",
-    "@esri/solution-feature-layer": "^1.7.0",
-    "@esri/solution-file": "^1.7.0",
-    "@esri/solution-group": "^1.7.0",
-    "@esri/solution-simple-types": "^1.7.0",
-    "@esri/solution-storymap": "^1.7.0",
     "tslib": "1.14.1"
   },
   "scripts": {
