--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -18,8 +18,12 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-teams": "9.29.0",
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-teams": "^12.4.1",
+    "@esri/solution-common": "^1.7.0",
+    "@esri/solution-feature-layer": "^1.7.0",
+    "@esri/solution-file": "^1.7.0",
+    "@esri/solution-group": "^1.7.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
@@ -28,14 +32,10 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/hub-common": "9.29.0",
-    "@esri/hub-teams": "9.29.0"
+    "@esri/hub-common": "^12.14.0",
+    "@esri/hub-teams": "^12.4.1"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.7.0",
-    "@esri/solution-feature-layer": "^1.7.0",
-    "@esri/solution-file": "^1.7.0",
-    "@esri/solution-group": "^1.7.0",
     "tslib": "1.14.1"
   },
   "scripts": {
