--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -16,17 +16,17 @@
     "@esri/arcgis-rest-auth": "3.5.0",
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/hub-common": "9.49.2",
+    "@esri/hub-common": "^12.14.0",
+    "@esri/solution-common": "^1.7.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.5.0",
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
-    "@esri/hub-common": "9.29.0"
+    "@esri/hub-common": "^12.14.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.7.0",
     "tslib": "1.14.1"
   },
   "scripts": {
