--- a/demos/copySolutions/package.json
+++ b/demos/copySolutions/package.json
@@ -23,6 +23,7 @@
     "@esri/hub-sites": "^12.5.0",
     "@esri/hub-teams": "^12.4.1",
     "@esri/solution-common": "^1.7.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.2",
