--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-deployer",
-  "version": "1.7.0",
+  "version": "2.0.0-alpha.0",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/deployer.umd.min.js",
@@ -22,16 +22,16 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^1.7.0",
-    "@esri/solution-feature-layer": "^1.7.0",
-    "@esri/solution-file": "^1.7.0",
-    "@esri/solution-form": "^1.7.0",
-    "@esri/solution-group": "^1.7.0",
-    "@esri/solution-hub-types": "^1.7.0",
-    "@esri/solution-simple-types": "^1.7.0",
-    "@esri/solution-storymap": "^1.7.0",
-    "@esri/solution-velocity": "^1.7.0",
-    "@esri/solution-web-experience": "^1.7.0",
+    "@esri/solution-common": "^2.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^2.0.0-alpha.0",
+    "@esri/solution-file": "^2.0.0-alpha.0",
+    "@esri/solution-form": "^2.0.0-alpha.0",
+    "@esri/solution-group": "^2.0.0-alpha.0",
+    "@esri/solution-hub-types": "^2.0.0-alpha.0",
+    "@esri/solution-simple-types": "^2.0.0-alpha.0",
+    "@esri/solution-storymap": "^2.0.0-alpha.0",
+    "@esri/solution-velocity": "^2.0.0-alpha.0",
+    "@esri/solution-web-experience": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
