--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-form",
-  "version": "1.7.0",
+  "version": "2.0.0-alpha.0",
   "description": "Manages the creation and deployment of form item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/file.umd.min.js",
@@ -22,12 +22,12 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^1.7.0",
-    "@esri/solution-feature-layer": "^1.7.0",
-    "@esri/solution-file": "^1.7.0",
-    "@esri/solution-group": "^1.7.0",
-    "@esri/solution-simple-types": "^1.7.0",
-    "@esri/solution-storymap": "^1.7.0",
+    "@esri/solution-common": "^2.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^2.0.0-alpha.0",
+    "@esri/solution-file": "^2.0.0-alpha.0",
+    "@esri/solution-group": "^2.0.0-alpha.0",
+    "@esri/solution-simple-types": "^2.0.0-alpha.0",
+    "@esri/solution-storymap": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
