--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-velocity",
-  "version": "1.7.0",
+  "version": "2.0.0-alpha.0",
   "description": "Manages the creation and deployment of Velocity item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/velocity.umd.min.js",
@@ -18,8 +18,8 @@
     "@esri/arcgis-rest-portal": "3.5.1",
     "@esri/arcgis-rest-request": "3.5.0",
     "@esri/arcgis-rest-service-admin": "3.5.0",
-    "@esri/solution-common": "^1.7.0",
-    "@esri/solution-simple-types": "^1.7.0",
+    "@esri/solution-common": "^2.0.0-alpha.0",
+    "@esri/solution-simple-types": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
