--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-viewer",
-  "version": "1.7.0",
+  "version": "2.0.0-alpha.0",
   "description": "Simplifies access to @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/viewer.umd.min.js",
@@ -22,7 +22,7 @@
     "@esri/hub-initiatives": "^12.4.1",
     "@esri/hub-sites": "^12.5.0",
     "@esri/hub-teams": "^12.4.1",
-    "@esri/solution-common": "^1.7.0",
+    "@esri/solution-common": "^2.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "peerDependencies": {
