--- a/demos/getItemInfo/package.json
+++ b/demos/getItemInfo/package.json
@@ -2,7 +2,7 @@
   "name": "getItemInfo",
   "version": "2.0.2-alpha.0",
   "description": "getItemInfo demo",
-  "author": "",
+  "author": "Esri",
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
