--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,6 @@
 {
   "packages": [
-    "packages/**",
-    "demos/compareJSON",
-    "demos/copySolutions",
-    "demos/getItemInfo"
+    "packages/**"
   ],
   "version": "2.0.2-alpha.0"
 }
