--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -14,18 +14,15 @@
   ],
   "devDependencies": {
     "@esri/arcgis-rest-auth": "~3.5.0",
+    "@esri/arcgis-rest-feature-layer": "~3.5.0",
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
+    "@esri/hub-common": "^13.0.0",
     "@esri/solution-common": "^3.1.0",
     "rollup": "2.79.1"
   },
-  "peerDependencies": {
-    "@esri/arcgis-rest-auth": "~3.5.0",
-    "@esri/arcgis-rest-portal": "~3.5.0",
-    "@esri/arcgis-rest-request": "~3.5.0"
-  },
   "dependencies": {
-    "@esri/hub-common": "^12.37.1",
+    "-": "^0.0.1",
     "tslib": "1.14.1"
   },
   "scripts": {
