--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -18,18 +18,16 @@
     "@esri/arcgis-rest-portal": "~3.5.0",
     "@esri/arcgis-rest-request": "~3.5.0",
     "@esri/arcgis-rest-service-admin": "~3.5.0",
+    "@esri/hub-common": "^13.0.0",
+    "@esri/hub-initiatives": "^13.0.0",
+    "@esri/hub-sites": "^13.0.0",
+    "@esri/hub-teams": "^13.0.0",
     "@esri/solution-common": "^3.1.0",
     "@esri/solution-simple-types": "^3.1.0",
     "rollup": "2.79.1"
   },
-  "peerDependencies": {
-    "@esri/arcgis-rest-auth": "~3.5.0",
-    "@esri/arcgis-rest-feature-layer": "~3.5.0",
-    "@esri/arcgis-rest-portal": "~3.5.0",
-    "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/arcgis-rest-service-admin": "~3.5.0"
-  },
   "dependencies": {
+    "-": "^0.0.1",
     "tslib": "1.14.1"
   },
   "scripts": {
