--- a/demos/copySolutions/package.json
+++ b/demos/copySolutions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copySolutions",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "copySolutions demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -22,7 +22,7 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
