--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploySolution",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "deploySolution demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -21,19 +21,19 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
-    "@esri/solution-creator": "^3.1.0",
-    "@esri/solution-deployer": "^3.1.0",
-    "@esri/solution-feature-layer": "^3.1.0",
-    "@esri/solution-file": "^3.1.0",
-    "@esri/solution-form": "^3.1.0",
-    "@esri/solution-group": "^3.1.0",
-    "@esri/solution-hub-types": "^3.1.0",
-    "@esri/solution-simple-types": "^3.1.0",
-    "@esri/solution-storymap": "^3.1.0",
-    "@esri/solution-velocity": "^3.1.0",
-    "@esri/solution-viewer": "^3.1.0",
-    "@esri/solution-web-experience": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-creator": "^4.0.0-alpha.0",
+    "@esri/solution-deployer": "^4.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^4.0.0-alpha.0",
+    "@esri/solution-file": "^4.0.0-alpha.0",
+    "@esri/solution-form": "^4.0.0-alpha.0",
+    "@esri/solution-group": "^4.0.0-alpha.0",
+    "@esri/solution-hub-types": "^4.0.0-alpha.0",
+    "@esri/solution-simple-types": "^4.0.0-alpha.0",
+    "@esri/solution-storymap": "^4.0.0-alpha.0",
+    "@esri/solution-velocity": "^4.0.0-alpha.0",
+    "@esri/solution-viewer": "^4.0.0-alpha.0",
+    "@esri/solution-web-experience": "^4.0.0-alpha.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
