--- a/demos/verifySolution/package.json
+++ b/demos/verifySolution/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verifySolution",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "verifySolution demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -21,8 +21,8 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
-    "@esri/solution-viewer": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-viewer": "^4.0.0-alpha.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
