--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-form",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "Manages the creation and deployment of form item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/file.umd.min.js",
@@ -22,12 +22,12 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
-    "@esri/solution-feature-layer": "^3.1.0",
-    "@esri/solution-file": "^3.1.0",
-    "@esri/solution-group": "^3.1.0",
-    "@esri/solution-simple-types": "^3.1.0",
-    "@esri/solution-storymap": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^4.0.0-alpha.0",
+    "@esri/solution-file": "^4.0.0-alpha.0",
+    "@esri/solution-group": "^4.0.0-alpha.0",
+    "@esri/solution-simple-types": "^4.0.0-alpha.0",
+    "@esri/solution-storymap": "^4.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
