--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-simple-types",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "Manages the creation and deployment of simple item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/simple-types.umd.min.js",
@@ -21,10 +21,10 @@
     "@esri/hub-common": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
-    "@esri/solution-feature-layer": "^3.1.0",
-    "@esri/solution-file": "^3.1.0",
-    "@esri/solution-group": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
+    "@esri/solution-feature-layer": "^4.0.0-alpha.0",
+    "@esri/solution-file": "^4.0.0-alpha.0",
+    "@esri/solution-group": "^4.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
