--- a/packages/viewer/package.json
+++ b/packages/viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-viewer",
-  "version": "3.1.0",
+  "version": "4.0.0-alpha.0",
   "description": "Simplifies access to @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/viewer.umd.min.js",
@@ -22,7 +22,7 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^3.1.0",
+    "@esri/solution-common": "^4.0.0-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
