--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -35,6 +35,7 @@
     "rollup": "2.79.1"
   },
   "dependencies": {
+    "@esri/arcgis-rest-types": "^3.6.0",
     "tslib": "1.14.1"
   },
   "scripts": {
