--- a/demos/compareJSON/package.json
+++ b/demos/compareJSON/package.json
@@ -12,11 +12,11 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "~3.5.0",
-    "@esri/arcgis-rest-feature-layer": "~3.5.0",
-    "@esri/arcgis-rest-portal": "~3.5.0",
-    "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/arcgis-rest-service-admin": "~3.5.0",
+    "@esri/arcgis-rest-auth": "^3.6.0",
+    "@esri/arcgis-rest-feature-layer": "^3.6.0",
+    "@esri/arcgis-rest-portal": "^3.6.0",
+    "@esri/arcgis-rest-request": "^3.6.0",
+    "@esri/arcgis-rest-service-admin": "^3.6.0",
     "@esri/hub-common": "^13.0.0",
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.0",
