--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -13,11 +13,11 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "~3.5.0",
-    "@esri/arcgis-rest-feature-layer": "~3.5.0",
-    "@esri/arcgis-rest-portal": "~3.5.0",
-    "@esri/arcgis-rest-request": "~3.5.0",
-    "@esri/arcgis-rest-service-admin": "~3.5.0",
+    "@esri/arcgis-rest-auth": "^3.6.0",
+    "@esri/arcgis-rest-feature-layer": "^3.6.0",
+    "@esri/arcgis-rest-portal": "^3.6.0",
+    "@esri/arcgis-rest-request": "^3.6.0",
+    "@esri/arcgis-rest-service-admin": "^3.6.0",
     "@esri/hub-common": "^13.0.0",
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/solution-common": "^4.0.0",
