--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-simple-types",
-  "version": "4.1.0",
+  "version": "4.1.1-alpha.0",
   "description": "Manages the creation and deployment of simple item types for @esri/solution.js.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -26,10 +26,10 @@
     "@esri/hub-common": "^13.4.1",
     "@esri/hub-sites": "^13.0.1",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^4.1.0",
-    "@esri/solution-feature-layer": "^4.1.0",
-    "@esri/solution-file": "^4.1.0",
-    "@esri/solution-group": "^4.1.0",
+    "@esri/solution-common": "^4.1.1-alpha.0",
+    "@esri/solution-feature-layer": "^4.1.1-alpha.0",
+    "@esri/solution-file": "^4.1.1-alpha.0",
+    "@esri/solution-group": "^4.1.1-alpha.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
